--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <header></header>
     <main>
         <section class="mainCircle">
-            <div id="purple" class="subCircle">
-            </div>
-            <div class="subCircle">
-            </div>
-            <div id="lightblue" class="subCircle">
-            </div>
+            <!-- <div class="subCircle green"></div> -->
+            <div class="subCircle bluedrop"></div>
+            <div class="subCircle darkyellow"></div>
+            <div class="subCircle greentablet"></div>
+            <div class="subCircle pinkring"></div>
+            <div class="subCircle sugarcube"></div>
+            <!-- <div class="subCircle purple"></div> -->
         </section>
     </main>
     <footer></footer>
