--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header></header>
     <main>
         <section class="mainCircle">
+        <h1>огурцы-голубцы</h1>
             <!-- <div class="subCircle green"></div> -->
             <div class="subCircle bluedrop"></div>
             <div class="subCircle darkyellow"></div>
